--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,12 @@
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>GeometryLibrary</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>GeometryUtils</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
